Fix padding to avoid header covering content

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 100px;
+    padding-top: 156px;
     margin-bottom: 90px;
 }
 
@@ -21,6 +21,16 @@ header {
 
 h1 {
     margin-top: 0;
+}
+
+
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: palevioletred;
 }
 
 footer {
@@ -44,15 +54,19 @@ footer {
     box-shadow: 0px 2px 5px lightgray;
 }
 
+.nav a {
+    display: block;
+    padding: 10px 15px;
+}
+
 .nav li {
-    display: inline-block;
-    padding: 10px;
     background-color: white;
 }
 
 .nav {
     list-style-type: none;
     text-align: center;
+    padding-left: 0;
 }
 
 .main-content {
@@ -70,10 +84,16 @@ footer {
 
 /* Media Queries */
 @media (min-width: 769px) {
+    
+    .nav li {
+        display: inline-block;
+        background-color: white;
+    }
+
+
     .main-content {
         width: 60%;
         margin: 0 auto;
-
     }
 
     .column {
